🔧 fix: registro militar, pattern inputs dependente-visitante, cracha alignment

--- a/src/pages/crachas/style.css
+++ b/src/pages/crachas/style.css
@@ -190,7 +190,7 @@
 }
 
 .cracha-normal-saram {
-    padding: 480px 0px 0px 200px;
+    padding: 485px 0px 0px 200px;
     font-size: 33px;
     font-weight: 700;
     width: 350px;
@@ -250,7 +250,7 @@
 }
 
 .cracha-qrcode-saram {
-    padding: 455px 0px 0px 50px;
+    padding: 465px 0px 0px 50px;
     font-size: 33px;
     font-weight: 700;
     width: 350px;
